--- a/saitae-web/src/main/webapp/resources/css/tpp.css
+++ b/saitae-web/src/main/webapp/resources/css/tpp.css
@@ -47,5 +47,5 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     margin: 0 auto;
     align-content: center;
     align-items: center;
-    width: 50%;
+    /*width: 45%;*/
 }
