--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -13,7 +13,7 @@
         <h:outputStylesheet library="css" name="cssLayout.css"/>
         <f:event type="preRenderView" listener="#{sessionController.log()}"/>
     </h:head>
-    <h:body>
+    <h:body style="background-color: #323232;">
         <div id="top">
             <ui:insert name="top">
                 <h:form>
