--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -8,12 +8,14 @@
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>#{sessionController.us.personaNombre.split(" ")[0]} #{sessionController.us.personaApellido.split(" ")[0]}</title>
+        <title>#{sessionController.us.personaNombre.split(" ")[0]} 
+            #{sessionController.us.personaApellido.split(" ")[0]}</title>
         <h:outputStylesheet library="css" name="default.css"/>
         <h:outputStylesheet library="css" name="cssLayout.css"/>
         <f:event type="preRenderView" listener="#{sessionController.log()}"/>
+        <link rel="Shortcut Icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnpWNwe4BoNBtI0iyzWf5LBxcFcjLPU7w1vwCzjXJwx5h7rXhX" type="image/jpg" />
     </h:head>
-    <h:body style="background-color: #323232;">
+    <h:body>
         <div id="top">
             <ui:insert name="top">
                 <h:form>
