--- a/saitae-web/src/main/webapp/resources/css/cssLayout.css
+++ b/saitae-web/src/main/webapp/resources/css/cssLayout.css
@@ -9,6 +9,7 @@
     position: relative;
     padding: 5px;
     margin: 10px 0px 0px 0px;
+    background-color: blue;
 }
 
 
@@ -28,7 +29,7 @@
 }
 #right {
     float: right;
-    /*background-color: #ece3a5;*/
+    background-color: #ece3a5;
     padding: 5px;
     width: 290px;
 }
