integración de aula a los tipos

--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -18,8 +18,8 @@
     <h:body>
         <div id="top">
             <ui:insert name="top">
-                <h:form>
-                    <p:growl id="messages" showDetail="true"/>
+                <h:form id="form0">
+                    <p:growl id="msgs" showDetail="true"/>
                     <p:menubar model="#{sessionController.mm}"></p:menubar>
 
                 </h:form>
