--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -20,7 +20,7 @@
             <ui:insert name="top">
                 <h:form id="form0">
                     <p:growl id="msgs" showDetail="true"/>
-                    <p:menubar model="#{sessionController.mm}"></p:menubar>
+                    <p:menubar id="menubar" model="#{sessionController.mm}"></p:menubar>
 
                 </h:form>
             </ui:insert>
