--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -16,7 +16,8 @@
         <f:event type="preRenderView" listener="#{sessionController.log()}"/>
         <link rel="Shortcut Icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnpWNwe4BoNBtI0iyzWf5LBxcFcjLPU7w1vwCzjXJwx5h7rXhX" type="image/jpg" />
     </h:head>
-    <h:body style="background-color: #191919; color: #ffffff">
+    <!-- color: #ffffff" -->
+    <h:body style="background-color: #191919;">
         <div id="top">
             <ui:insert name="top">
                 <h:form id="form0">
