--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -17,7 +17,7 @@
         <link rel="Shortcut Icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnpWNwe4BoNBtI0iyzWf5LBxcFcjLPU7w1vwCzjXJwx5h7rXhX" type="image/jpg" />
     </h:head>
     <!-- color: #ffffff" -->
-    <h:body style="background-color: #191919;">
+    <h:body style="background-color: #191919; color: white;">
         <div id="top">
             <ui:insert name="top">
                 <h:form id="form0">
