--- a/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
@@ -9,47 +9,41 @@
 
     <!-- INTERFACE -->
     <cc:interface>
+        <cc:attribute name="persona" required="true" type="net.delsas.saitae.entities.Persona"/>
+        <cc:attribute name="departamentoLista" required="true"/>
+        <cc:attribute name="dui" required="true"/>
+        <cc:attribute name="departamento" required="true"/>
+        <cc:attribute name="municipio" required="true"/>
+        <cc:attribute name="municipioLista" required="true"/>
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>   
-        <h:panelGrid columns="3"  style="color: fuchsia;" >
+        <h:panelGrid columns="3">
             <p:outputLabel for="dui" value="DUI: "/>
-            <p:inputMask id="dui" value="#{maestroController.dui}" required="true" mask="99999999-9"
+            <p:inputMask id="dui" value="#{cc.attrs.dui}" required="true" mask="99999999-9"
                          title="Ingrese el número de documento de identificación de la persona."/>
-            <p:message for="dui" showSummary="true" />                
+            <p:message for="dui" showSummary="true" />
+
+            <p:outputLabel for="nit" value="NIT: "/>
+            <p:inputMask id="nit" value="#{cc.attrs.persona.personaNit}" required="true" mask="9999-999999-999-9" title="Ingrese nu NIT"/>
+            <p:message for="nit" showSummary="true" />              
 
             <p:outputLabel for="nombre" value="Nombre: "/>
-            <p:inputText id="nombre" value="#{maestroController.maestro.persona.personaNombre}" required="true" title="Ingrese el nombre de la persona a agregar"/>
+            <p:inputText id="nombre" value="#{cc.attrs.persona.personaNombre}" required="true" title="Ingrese el nombre de la persona a agregar"/>
             <p:message for="nombre" showSummary="true" />
 
             <p:outputLabel for="apellido" value="Apellidos: "/>
-            <p:inputText id="apellido" value="#{maestroController.maestro.persona.personaApellido}" required="true" title="Apellidos de la persona"/>
+            <p:inputText id="apellido" value="#{cc.attrs.persona.personaApellido}" required="true" title="Apellidos de la persona"/>
             <p:message for="apellido" showSummary="true" /> 
 
             <p:outputLabel for="fecha" value="Fecha de nacimiento: "/>
-            <p:calendar id="fecha" value="#{maestroController.maestro.persona.personaNacimiento}" pattern="dd-MM-yyyy" mask="true" 
+            <p:calendar id="fecha" value="#{cc.attrs.persona.personaNacimiento}" pattern="dd-MM-yyyy" mask="true" 
                         title="Ingrese la fecha de nacimiento de la persona."/>
             <p:message for="fecha" showSummary="true" />
 
-            <p:outputLabel for="direcion" value="Dirección: "/>
-            <p:inputText id="direcion" value="#{maestroController.maestro.persona.personaDireccion}" required="true" title="Ingrese la dirección de residencia de la persona"/>
-            <p:message for="direcion" showSummary="true" />
-
-            <p:outputLabel for="telefono" value="Teléfono Personal: "/>
-            <p:inputMask id="telefono" value="#{maestroController.maestro.persona.personaTelefono}" required="true" mask="9999-9999" title="Ingrese el número de reléfono personal de la persona"/>
-            <p:message for="telefono" showSummary="true" />
-
-            <p:outputLabel for="titulo" value="Profesión: "/>
-            <p:inputText id="titulo" value="#{maestroController.maestro.persona.personaOCupacion}" required="true" type="text" title="Ingrese la profesión de la persona."/>
-            <p:message for="titulo" showSummary="true" />
-
-            <p:outputLabel for="nit" value="NIT: "/>
-            <p:inputMask id="nit" value="#{maestroController.maestro.persona.personaNit}" required="true" mask="9999-999999-999-9" title="Ingrese nu NIT"/>
-            <p:message for="nit" showSummary="true" />
-
             <p:outputLabel for="sexo" value="Sexo: "/>
-            <p:selectOneMenu id="sexo" value="#{maestroController.maestro.persona.personaSexo}" style="width:125px" title="Seleccione su sexo">
+            <p:selectOneMenu id="sexo" value="#{cc.attrs.persona.personaSexo}" style="width:125px" title="Seleccione su sexo">
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                 <f:selectItem itemLabel="Femenino" itemValue="0" />
                 <f:selectItem itemLabel="Masculino" itemValue="1" />
@@ -57,26 +51,42 @@
             <p:message for="sexo" showSummary="true" />
 
             <p:outputLabel for="ef" value="Estado Familiar: "/>
-            <p:selectOneMenu id="ef" value="#{maestroController.maestro.persona.personaEstadoFamiliar}" style="width:125px" 
+            <p:selectOneMenu id="ef" value="#{cc.attrs.persona.personaEstadoFamiliar}" style="width:125px" 
                              title="Seleccione el estado familiar de la persona">
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                 <f:selectItem itemLabel="Solter@" itemValue="0" />
                 <f:selectItem itemLabel="Casad@" itemValue="1" />
                 <f:selectItem itemLabel="Acompañad@" itemValue="2"/>
             </p:selectOneMenu>
-            <p:message for="ef" showSummary="true" />
+            <p:message for="ef" showSummary="true" />           
 
             <p:outputLabel for="nacion" value="Nacionalidad: "/>
-            <p:selectOneMenu id="nacion" value="#{maestroController.maestro.persona.personaNacionalidad}"  required="true"
+            <p:selectOneMenu id="nacion" value="#{cc.attrs.persona.personaNacionalidad}"  required="true"
                              style="width:125px" label="Seleccione su nacionalidad">
+                <f:selectItem itemLabel="Seleccione" itemValue="9" />
                 <f:selectItem itemLabel="Salvadoreña" itemValue="Salvadoreña" />
                 <f:selectItem itemLabel="Extrangera" itemValue="Extrangera" />
                 <p:ajax update="dep mun"/>
             </p:selectOneMenu>
             <p:message for="nacion" showSummary="true" />
 
+            <h:outputLabel for="dep" value="Departamento de nacimiento: " />
+            <p:selectOneMenu id="dep" value="#{cc.attrs.departamento}" required="true" style="width:125px" 
+                             title="Seleccione el departamento de nacimiento">
+                <f:selectItems value="#{cc.attrs.departamentoLista}"/>
+                <p:ajax update="mun"/>
+            </p:selectOneMenu>
+            <p:column/>
+
+            <h:outputLabel for="mun" value="Municipio de nacimiento: " />
+            <p:selectOneMenu id="mun" value="#{cc.attrs.municipio}" required="true" style="width:125px" 
+                             title="Seleccione el departamento de nacimiento">
+                <f:selectItems value="#{cc.attrs.municipioLista}"/>
+            </p:selectOneMenu>
+            <p:column/>
+
             <p:outputLabel for="zona" value="Zona de residencia: *" />
-            <p:selectOneMenu id="zona" value="#{maestroController.maestro.persona.personaZonaVivienda}" required="true"
+            <p:selectOneMenu id="zona" value="#{cc.attrs.persona.personaZonaVivienda}" required="true"
                              style="width:125px" title="Seleccione su Zona donde vive">
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                 <f:selectItem itemLabel="Rural" itemValue="0" />
@@ -85,31 +95,16 @@
             <p:messages for="zona" showSummary="true"/>
 
             <p:outputLabel for="cod" value="Código de residencia: "/>
-            <p:inputText id="cod" value="#{maestroController.maestro.persona.personaCodigoResidencia}" 
+            <p:inputText id="cod" value="#{cc.attrs.persona.personaCodigoResidencia}" 
                          required="true"/>
-            <p:message for="nit" showSummary="true" />
+            <p:message for="cod" showSummary="true" />
 
-            <h:outputLabel for="dep" value="Departamento de nacimiento: " />
-            <p:selectOneMenu id="dep" value="#{maestroController.departamento}" required="true" style="width:125px" 
-                             title="Seleccione el departamento de nacimiento">
-                <f:selectItems value="#{maestroController.departamentosLista}"/>
-                <p:ajax update="mun"/>
-            </p:selectOneMenu>
-            <p:column/>
-
-            <h:outputLabel for="mun" value="Municipio de nacimiento: " />
-            <p:selectOneMenu id="mun" value="#{maestroController.municipio}" required="true" style="width:125px" 
-                             title="Seleccione el departamento de nacimiento">
-                <f:selectItems value="#{maestroController.municipiosLista}"/>
-            </p:selectOneMenu>
-            <p:column/>
-
-            <p:outputLabel for="email" value="Correo electrónico: "/>
-            <p:inputText id="email" value="#{maestroController.maestro.persona.personaEmail}" type="email"/>
-            <p:column/>
+            <p:outputLabel for="titulo" value="Profesión: "/>
+            <p:inputText id="titulo" value="#{cc.attrs.persona.personaOCupacion}" required="true" type="text" title="Ingrese la profesión de la persona."/>
+            <p:message for="titulo" showSummary="true" />
 
             <p:outputLabel for="disca" value="Discapacidades: " />
-            <p:inputText id="disca" value="#{maestroController.maestro.persona.personaDiscapacidades}" type="text"
+            <p:inputText id="disca" value="#{cc.attrs.persona.personaDiscapacidades}" type="text"
                          title="Si tiene alguna discapacidad, escríbalas separadas por comas"/>
             <p:column/> 
         </h:panelGrid> 
