--- a/saitae-web/src/main/webapp/resources/components/autentia/maestro.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/maestro.xhtml
@@ -14,7 +14,7 @@
     <cc:implementation>
         <h:panelGrid columns="3">
             <p:outputLabel for="nip" value="NIP: "/>
-            <p:inputText id="nip" value="#{cc.attrs.maestro.idmaestro}" required="true"/>
+            <p:inputText id="nip" value="#{cc.attrs.maestro.maestroNip}" required="true"/>
             <p:message for="nip"/>
             
             <p:outputLabel for="nup" value="NUP: "/>
