--- a/saitae-web/src/main/webapp/resources/components/autentia/persona1.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/persona1.xhtml
@@ -20,6 +20,10 @@
             <p:outputLabel for="telefono" value="Teléfono Personal: "/>
             <p:inputMask id="telefono" value="#{cc.attrs.persona.personaTelefono}" required="true" mask="9999-9999" title="Ingrese el número de reléfono personal de la persona"/>
             <p:message for="telefono" showSummary="true" />
+            
+            <p:outputLabel for="telefono1" value="Teléfono de Residencia: "/>
+            <p:inputMask id="telefono1" value="#{cc.attrs.persona.maestro.maestrocolTelefonoResidencia}" required="true" mask="9999-9999" title="Ingrese el número de reléfono de la residencia de la persona"/>
+            <p:message for="telefono1" showSummary="true" />
 
             <p:outputLabel for="email" value="Correo electrónico: "/>
             <p:inputText id="email" value="#{cc.attrs.persona.personaEmail}" type="email"/>
