--- a/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
@@ -84,7 +84,7 @@
 
             <h:outputLabel for="mun" value="Municipio de nacimiento: " />
             <p:selectOneMenu id="mun" value="#{cc.attrs.municipio}" required="true" style="width:125px" 
-                             title="Seleccione el departamento de nacimiento">
+                             title="Seleccione el municipio de nacimiento">
                 <f:selectItems value="#{cc.attrs.municipioLista}"/>
             </p:selectOneMenu>
             <p:column/>
