--- a/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
@@ -15,7 +15,7 @@
         <cc:attribute name="departamento" required="true"/>
         <cc:attribute name="municipio" required="true"/>
         <cc:attribute name="municipioLista" required="true"/>
-        <cc:attribute name="onItemSelect" required="true"/>
+        <cc:attribute name="listenerA" required="true"/>
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
@@ -24,8 +24,10 @@
             <p:outputLabel for="dui" value="DUI: "/>
             <p:autoComplete id="dui" value="#{cc.attrs.dui}" required="true" 
                          title="Ingrese el número de documento de identificación de la persona."
-                         completeMethod="#{maestroController.completeText}">
-                <p:ajax event="itemSelect" listener="#{maestroController.onItemSelect}" update="form0:msgs form1" />
+                         completeMethod="#{axiliarController.completeText}">
+                <p:ajax event="itemSelect" listener="#{axiliarController.onItemSelect}" 
+                        update="form0:msgs form1"/>
+                <p:ajax event="itemSelect" listener="#{cc.attrs.listenerA}"/>
         </p:autoComplete>
             <p:message for="dui" showSummary="true" />
 
