--- a/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
@@ -15,7 +15,8 @@
         <cc:attribute name="departamento" required="true"/>
         <cc:attribute name="municipio" required="true"/>
         <cc:attribute name="municipioLista" required="true"/>
-        <cc:attribute name="listenerA" required="true"/>
+        <cc:attribute name="listenerA" method-signature="java.lang.Object action()" 
+                      required="false" default="null"/>
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
@@ -25,8 +26,7 @@
             <p:autoComplete id="dui" value="#{cc.attrs.dui}" required="true" 
                          title="Ingrese el número de documento de identificación de la persona."
                          completeMethod="#{axiliarController.completeText}">
-                <p:ajax event="itemSelect" listener="#{axiliarController.onItemSelect}" 
-                        update="form0:msgs form1"/>
+                <p:ajax event="itemSelect" listener="#{axiliarController.onItemSelect}" update="form0:msgs form1"/>
                 <p:ajax event="itemSelect" listener="#{cc.attrs.listenerA}"/>
         </p:autoComplete>
             <p:message for="dui" showSummary="true" />
