--- a/saitae-web/src/main/webapp/resources/components/autentia/estudiante.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/estudiante.xhtml
@@ -9,6 +9,7 @@
     <!-- INTERFACE -->
     <cc:interface>
         <cc:attribute name="persona" required="true" type="net.delsas.saitae.entities.Persona"/>
+        <cc:attribute name="estudiante" required="true" type="net.delsas.saitae.entities.Estudiante"/>
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
